# SenseGNAT

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  crossinvestigation-plan.md  pyproject.toml
.github/workflows/: ci.yml  dco_check.yml  dependency-review.yml  pages.yml  pylint.yml  python-lint-fast.yml  python-security.yml  python-typecheck.yml  release.yml  semgrep.yml
docs/: _config.yml  index.md
docs/_includes/: head_custom.html  header.html
docs/branding/: logo-kit-brief.md  style-guide.md
docs/diagrams/: architecture.md  sensegnat_architecture.grafly.json
docs/explanation/: architecture.md  explainability-first.md  index.md  policy-guided-baselining.md
docs/how-to/: add-a-detector.md  index.md  (+4 more)
examples/: run_phase_a.py  sample_eve.json  sample_events.csv  sample_splunk_results.json  sensegnat.example.policies.yaml  sensegnat.example.yaml
scripts/: generate_logo_kit.py  tree.txt
sensegnat/: __init__.py  cli.py
tests/: test_cli.py  test_common.py  test_config.py  test_connector_stamping.py  test_csv_adapter.py  test_env_interpolation.py  test_factory.py  test_gnat_connector.py  test_gnat_telemetry_adapter.py  test_grouping_envelope.py  test_integration.py  test_json_store.py  test_lookup_failure_degrades.py  test_narrative.py  test_peer_deviation.py  test_policy.py  test_policy_detector_stamping.py  test_policy_investigation.py  test_policy_violation.py  test_profile_merge.py  test_rarity.py  test_run_once_push.py  test_splunk_adapter.py  test_subject_lookup.py  test_suricata_eve_adapter.py  test_time_window_drift.py  test_zeek_conn_adapter.py
(+44 files in other folders)
